--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,7 @@
       href="https://i.postimg.cc/Px5m3DVF/Twitter-400x400.png"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Zwigato</title>
   </head>
   <body>
     <div id="root"></div>
